Top letters of main copy are no longer cropped on mobile

--- a/PROJECTS/APC/Heroes/20190108_Motivational/src/styles.scss
+++ b/PROJECTS/APC/Heroes/20190108_Motivational/src/styles.scss
@@ -72,7 +72,7 @@
         -webkit-text-fill-color: transparent;
         margin: 0vw !important;
         font-size: 9vw;
-        line-height: 8.5vw;
+        line-height: 9.2vw;
         font-family: 'Rockwell', 'Apercu', 'Helvetica Neue', HelveticaNeue, Helvetica, Arial, sans-serif;
         font-weight: 800;
         font-style: normal;
